ISSUE: Redmine 301 PURPOSE: Improve styling on shipment/permit ajax loaded list (work in progress). DESCRIPTION: cleaned up indentation and div/span/ul/li nesting in getShipmentByTransHtml method in components.cfc.  Closer, but not quite as desired yet.  Fixed edit button.

--- a/includes/style.css
+++ b/includes/style.css
@@ -5376,17 +5376,17 @@ div.ships2 ul.shipdata li {width: 150px;font-weight: normal; float:left;display:
 div.ships2 ul.shipaddresseshead li {width: 575px;font-weight:bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
 div.ships2 ul.shipformhead li {width: 575px;font-weight:bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
 div.ships2 ul.shipaddressesdata li {width: 575px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;margin-top:0em;padding-top:0;}
-/*div.ships2 input {margin-top: 1em;}*/
-div#shippermitstyle {border-top: 1px dashed black;margin-top: 1em;padding-top:1em;float: left;width: 76em;margin-bottom: .25em; padding-bottom: 1em;border-bottom: 1px solid black;}
-div#shippermitstyle h4 {font-size: 16px;margin:0 auto;padding-bottom:.25em;}
+div#ships div.permitship input {margin-top: 0px;}
+div.shippermitstyle {border-top: 1px dashed black;margin-top: 1em;padding-top:1em;float: left;width: 76em;margin-bottom: .25em; padding-bottom: 1em;border-bottom: 1px solid black;}
+div.shippermitstyle h4 {font-size: 16px;margin:0 auto;padding-bottom:.25em;}
 
-div#shippermitstyle ul.permitshipul {width: 800px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;padding: .25em 0;}
-div#shippermitstyle ul.permitshipul li {width: auto;margin-right: 1em;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;}
-div#shippermitstyle ul.permitshipul li input {margin-top:0;}
-div#shippermitstyle ul.permitshipul2 {width: 380px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;padding: .25em 0;}
-div#shippermitstyle ul.permitshipul2 li {width: auto;margin-right: 1em;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;}
-div#shippermitstyle ul.permitshipul2 li input {margin-top:0;}
-div#changeship {width: 76em;float:left;}
+div.shippermitstyle ul.permitshipul {width: 800px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;padding: .25em 0;}
+div.shippermitstyle ul.permitshipul li {width: auto;margin-right: 1em;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;}
+div.shippermitstyle ul.permitshipul li input {margin-top:0;}
+div.shippermitstyle ul.permitshipul2 {width: 380px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;padding: .25em 0;}
+div.shippermitstyle ul.permitshipul2 li {width: auto;margin-right: 1em;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;}
+div.shippermitstyle ul.permitshipul2 li input {margin-top:0;}
+div.changeship {width: 76em;float:left;}
 div.shipbuttons {width: 100px;margin-right: 1em;float:left;display:inline;}
 div#accsection {width: 76em;margin: 0 auto;margin-bottom: .5em;padding: 3px 0;}
 div#accsection h3 {margin-bottom: .5em;margin-top: 1em;}
