--- a/includes/style.css
+++ b/includes/style.css
@@ -5360,34 +5360,37 @@ table.partname th {height: 20px;background-color: #bbd6e7;font-size: 15px;}
 table.partname th.inside, table.partname td.inside {padding: 2px 8px;text-align: left;margin:0;vertical-align: middle;min-height: 20px;font-size: 15px;}
 table.partname td.partnameatts {padding-bottom: 3px;}
 .shippingBlock h3 {margin: 0 auto;}
-div#ships {width: 76em;margin: 0 auto; }
-div#ships ul.shipheaders {width:76em;float:left;display:inline;list-style-type:none;}
-div#ships ul.shipheaders li {width: 150px;font-weight: bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
-div#ships ul.shipdata {width:76em;float:left;display:inline;list-style-type:none;margin-top:0;}
-div#ships ul.shipdata li {width: 150px;font-weight: normal; float:left;display:inline;list-style-type:none;color: black;}
-div#ships ul.shipaddresseshead li {width: 575px;font-weight:bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
-div#ships ul.shipaddressesdata li {width: 575px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;margin-top:0em;padding-top:0;}
-div#ships input {margin-top: 1em;}
-div.ships2 {width: 76em;margin: 0 auto;margin-top: 1em; }
-div.ships2 ul.shipheaders {width:76em;float:left;display:inline;list-style-type:none;}
-div.ships2 ul.shipheaders li {width: 150px;font-weight: bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
-div.ships2 ul.shipdata {width:76em;float:left;display:inline;list-style-type:none;margin-top:0;}
-div.ships2 ul.shipdata li {width: 150px;font-weight: normal; float:left;display:inline;list-style-type:none;color: black;}
-div.ships2 ul.shipaddresseshead li {width: 575px;font-weight:bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
-div.ships2 ul.shipformhead li {width: 575px;font-weight:bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
-div.ships2 ul.shipaddressesdata li {width: 575px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;margin-top:0em;padding-top:0;}
-div#ships div.permitship input {margin-top: 0px;}
-div.shippermitstyle {border-top: 1px dashed black;margin-top: 1em;padding-top:1em;float: left;width: 76em;margin-bottom: .25em; padding-bottom: 1em;border-bottom: 1px solid black;}
-div.shippermitstyle h4 {font-size: 16px;margin:0 auto;padding-bottom:.25em;}
+div#shipments {width: 76em;margin: 0 auto;}
+/** 
+div#shipments ul.shipheaders {width:76em;float:left;display:inline;list-style-type:none;}
+div#shipments ul.shipheaders li {width: 150px;font-weight: bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
+div#shipments ul.shipdata {width:76em;float:left;display:inline;list-style-type:none;margin-top:0;}
+div#shipments ul.shipdata li {width: 150px;font-weight: normal; float:left;display:inline;list-style-type:none;color: black;}
+div#shipments ul.shipaddresseshead li {width: 575px;font-weight:bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
+div#shipments ul.shipaddressesdata li {width: 575px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;margin-top:0em;padding-top:0;}
+*/
+div#shipments input {margin-top: 1em;}
+div.shipment {width: 76em;margin: 0 auto;margin-top: 1em; border-bottom: 1px solid black; }
+div.shipment ul.shipheaders {width:76em;float:left;display:inline;list-style-type:none; margin: 0 auto; margin-bottom: 0.5em; }
+div.shipment ul.shipheaders li {width: 150px;font-weight: bold; float:left;display:inline;list-style-type:none;color: black; margin 0 auto; margin-top: 0em;}
+div.shipment ul.shipdata {width:76em;float:left;display:inline;list-style-type:none;margin-top:0; margin-bottom: 0.25em; }
+div.shipment ul.shipdata li {width: 150px;font-weight: normal; float:left;display:inline;list-style-type:none;color: black;}
+div.shipment ul.shipaddresseshead li {width: 575px;font-weight:bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
+div.shipment ul.shipformhead li {width: 575px;font-weight:bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
+div.shipment ul.shipaddressesdata li {width: 575px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;margin-top:0em;padding-top:0;}
+div.permitship { margin-left: 3em; }
+div#shipments div.permitship input {margin-top: 0px;}
+div.shippermitstyle { margin-top: 1em;padding-top:1em;float: left;width: 76em;margin-bottom: .25em; padding-bottom: .5em; }
+div.shippermitstyle h4 {font-size: 16px;margin:0 auto;padding-bottom:.25em; margin-left: 3em; }
 
-div.shippermitstyle ul.permitshipul {width: 800px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;padding: .25em 0;}
+div.shippermitstyle ul.permitshipul {width: 800px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;padding: .25em 0; margin: 0 auto; }
 div.shippermitstyle ul.permitshipul li {width: auto;margin-right: 1em;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;}
 div.shippermitstyle ul.permitshipul li input {margin-top:0;}
-div.shippermitstyle ul.permitshipul2 {width: 380px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;padding: .25em 0;}
+div.shippermitstyle ul.permitshipul2 {width: 380px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;padding: .25em 0; margin: 0 auto; }
 div.shippermitstyle ul.permitshipul2 li {width: auto;margin-right: 1em;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;}
 div.shippermitstyle ul.permitshipul2 li input {margin-top:0;}
-div.changeship {width: 76em;float:left;}
-div.shipbuttons {width: 100px;margin-right: 1em;float:left;display:inline;}
+div.changeship {width: 76em; float:left; margin-left: 3em; }
+div.shipbuttons {margin-right: .5em; float: left;display:inline;}
 div#accsection {width: 76em;margin: 0 auto;margin-bottom: .5em;padding: 3px 0;}
 div#accsection h3 {margin-bottom: .5em;margin-top: 1em;}
 div#accsection ul.accn li.accn2 {margin: .5em 0 .5em 0;list-style:none;border-bottom: 1px dashed black;padding: .5em 0;}
@@ -5398,5 +5401,5 @@ div#permitmedia {width: 76em;margin: 0 auto;padding-bottom: 2em;}
 div#permitmedia h3 {width: 76em;margin: 0 auto;margin-bottom: .5em;padding-top: 1em;}
 div#permitmedia ul li {margin: .25em 0;list-style:none;margin-bottom: .5em;}
 div.shipmentnote {font-size: 14px; font-weight: bold;float: left;margin-left: 265px;display: inline;color: #333;margin-top: -1.22em;}
-.deletestyle {}
+div.deletestyle { margin: 0 auto; }
 .addstyle {margin-left: 130px;float:left;width:auto;padding: 2px 6px;margin-top:-21px;display: inline;}
