--- a/includes/style.css
+++ b/includes/style.css
@@ -1341,10 +1341,11 @@ td.lbl {
 	background-color: white;
 	overflow: auto;
 }
+/** This may be obsolete, invoked only from js get_AgentName() **/
 .pickDiv {
 	border: 3px solid green;
 	z-index: 9999;
-	position: absolute;
+	position: relative;
 	top: 5%;
 	left: 5%;
 	width: 65%;
@@ -4492,14 +4493,14 @@ table.navtabs {
 	margin: 0 auto;
 	padding-bottom: 1em;
 }
+/** Position nextnum blocks using jquery-ui.position(). */
 .nextnum {
 	width: 34%;
-	border: 1px solid green;
-	display: inline-block;
-	float: right;
-	position: relative;
-	margin-top: -580px;
+	border: 2px solid green;
 	margin-right: 0;
+    	border-radius: 4px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
 }
 .nextnum p {
 	margin: 20px 10px;
