--- a/includes/style.css
+++ b/includes/style.css
@@ -4360,7 +4360,7 @@ table.navtabs {
 .databases {
 	font-size: 12px;
 	color: #000;
-	width: 580px;
+	width: 688px;
 	float: right;
 	margin-top: .5em;
 	padding: 0 0em 1em 1em;
@@ -4379,7 +4379,9 @@ table.navtabs {
 }
 .databases img.arctos_logo {
 	width: 145px;
-	margin-right: 1.3em
+	margin-right: 1.3em;
+	height: 65px;
+	margin-top:2px;
 }
 .databases img.gbif_logo {
 	width: 90px;
