--- a/includes/style.css
+++ b/includes/style.css
@@ -4360,13 +4360,18 @@ table.navtabs {
 .databases {
 	font-size: 12px;
 	color: #000;
-	width: 580px;
+	width: 646px;
 	float: right;
 	margin-top: .5em;
-	padding: 0 0em 1em 1em;
+	padding-bottom:2em;
 }
-.databases p {
+.databases p.tagline {
 	margin-bottom: .25em;
+	float:right;
+	position: absolute;
+	margin-top: 3.55em;
+	text-align: right;
+	width: 400px;
 }
 .databases a {
 	width: auto;
@@ -4378,8 +4383,7 @@ table.navtabs {
 	margin-right: 1.2em;
 }
 .databases img.arctos_logo {
-	width: 49px;
-	margin-right: 1.3em
+	width: 108px;
 }
 .databases img.gbif_logo {
 	width: 90px;
