--- a/includes/bootstrap-4.0.0-alpha.6-dist/css/bootstrap.css
+++ b/includes/bootstrap-4.0.0-alpha.6-dist/css/bootstrap.css
@@ -9326,6 +9326,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
  */
 
 /* Move down content because we have a fixed navbar that is 50px tall */
+
+
 body {
   padding-top: 50px;
 }
@@ -9333,7 +9335,15 @@ body {
 /*
  * Typography
  */
-
+.mcz { height: 71px;
+    margin-top: 1em;
+    padding: 1em;
+	font-size: 20px;
+	font-weight: bold;
+}
+.mcz_logo {
+	width: 150px;
+}
 h1 {
   margin-bottom: 20px;
   padding-bottom: 9px;
