--- a/includes/bootstrap-4.0.0-alpha.6-dist/css/widescreen.css
+++ b/includes/bootstrap-4.0.0-alpha.6-dist/css/widescreen.css
@@ -56,7 +56,8 @@ button.blue_button {
 }
 .footer .bg-inverse {
 	z-index: 1;
-	position: relative;		
+	position: relative;	
+	background: #ccc;
 }
 .footer .helplinks a{
 	width: 33%;
