--- a/includes/bootstrap-4.0.0-alpha.6-dist/css/widescreen.css
+++ b/includes/bootstrap-4.0.0-alpha.6-dist/css/widescreen.css
@@ -3,11 +3,93 @@ body {
 	font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 .container-fluid {
-	top: 20px;
+	top: 50px;
 	left: 15px;
 }
+.navbar.bg-inverse {
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a51c30+0,a51c30+38,1e1e1e+38,1e1e1e+100 */
+background: #a51c30; /* Old browsers */
+background: -moz-linear-gradient(top,  #a51c30 0%, #a51c30 38%, #1e1e1e 38%, #1e1e1e 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #a51c30 0%,#a51c30 38%,#1e1e1e 38%,#1e1e1e 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #a51c30 0%,#a51c30 38%,#1e1e1e 38%,#1e1e1e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a51c30', endColorstr='#1e1e1e',GradientType=0 ); /* IE6-9 */
+	line-height: 40px;
+	padding-top: 0em;
+
+}
+
+.navbar a.navbar-brand {margin-top: 2.1em;line-height: 28px;}
 .navbar-inverse .navbar-toggler {
 	margin-top: .45em;
+}
+.navbar-inverse .navbar-nav li.nav-item a.nav-link {
+	color: #fff;
+}
+.navbar-inverse .navbar-nav li.nav-item a.nav-link:hover {
+	color: #CCC;
+}
+.navbar-inverse .navbar-nav li.active {
+	color: lightblue;
+}
+.footer .bg-inverse{
+	z-index: 1;
+	position: relative;	
+	width: 100%;
+	background-color: #eeeeee !important;
+	padding: 1em 2em;
+	overflow: hidden;border-top: 2px solid #ccc;
+}
+
+.helplinks {}
+.helplinks a {width: 33%;
+	float: left;
+	position: relative;
+	text-align: center;
+	font-weight: bold;
+}
+.copyright img {
+	width: 40px;
+	float:left;
+}
+.footer .copyright {
+	float: left;
+	width: 40%;
+	margin-top: 1.5em;
+}
+.footer .copyright img {
+	width: 50px;
+	float: left;
+	margin-top: 2px;
+	margin-right: 5px;
+}
+.footer .copyright p {
+	margin-top: 2px;
+	margin-bottom: 0em;
+	line-height: 1.15em;
+	font-size: .9em;
+	font-family: "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+	letter-spacing: .02em;
+}
+.footer .copyright a {
+	line-height: 1em;
+	margin-top: 0;
+}
+.footer .logos {
+	float: right;
+	width: 60%;
+	right: 3em;
+	text-align: right;
+	margin-top: 0em;
+}
+.footer .logos img {height: 50px;}
+.footer .logos img.arctos_logo {height: 70px;margin-top: 2em; }
+.footer p.tagline {
+	margin-bottom: .3em;
+	line-height: 1em;
+	font-size: 0.9em;
+	margin-top: -20px;
+	letter-spacing: .02em;
+	margin-right: 170px;
 }
 .pos-f-t {
 	margin-top: -1em;
@@ -21,14 +103,19 @@ h1 {
 	font-size: 1.5em;
 }
 .harvard_topbar {
-	background-color: #a51c30;
+	
 	color: #BAC5c6;
-	padding: 10px 0;
+	top: 6px;
 	display: block;
 	width: 100%;
+	position: absolute; 
+	z-index: 2;
+	line-height: 28px
+		
 }
 .harvard_topbar img {
-	margin-top: .5em;
+	margin-top: 0em;
+	top:0;
 	margin-left: -1em;	
 	width: 20px;
 }
@@ -40,13 +127,15 @@ h1 {
 	left:20px;
 	font-size: 1rem;
 	line-height: 1rem;
-	padding-top: 5px;
+	
 }
+#wrapper.toggled .harvard_topbar img {margin-top: .5em;}
 .sidbar-nav2 h3 {
 	float: right;
 }
 .harvard_topbar span {
 	text-shadow: 1px 1px #444;
+	font-size: 20px;
 }
 .harvard_topbar img {
 	margin: 0 5px 3px 1.2em;
@@ -54,14 +143,7 @@ h1 {
 button.blue_button {
 	text-align: center
 }
-.footer .bg-inverse {
-	z-index: 1;
-	position: relative;	
-	background: #ccc;
-}
-.footer .helplinks a{
-	width: 33%;
-}
+a.navbar-brand img {margin-left: -1em;}
 
 /*  sidebar styles */
 #wrapper {
@@ -113,8 +195,8 @@ button.blue_button {
 	right: 0;
 	width: 200px;
 	margin: 0;
-	top: 2.65em;
-	padding: 0 15px 25px 0;
+	top: 1.6em;
+	padding: 0 15px 35px 0;
 	list-style: none;
 	background-color: #eee;
 	border-right: #666;
@@ -133,6 +215,7 @@ button.blue_button {
 	text-decoration: none;
 	color: #fff;
 	color: #1e1e1e;/* background: #312A25;*/
+	
 }
 .sidebar-nav li a:active, .sidebar-nav li a:focus {
 	text-decoration: none;
@@ -159,7 +242,7 @@ button.blue_button {
 	margin: 0;
 	padding: 0 15px 0 0;
 	list-style: none;
-	top: 17em;
+	top: 13em;
 	padding-bottom: 2em;
 	background-color: #BAC5C6;
 	border-radius: 10px 10px 0 40px;
@@ -211,7 +294,7 @@ button.blue_button {
 
 @media(min-width:991px) {
 .navbar-toggleable-md .navbar-nav .nav-link {
-	padding-right: 0em;
+	padding-right: .5em;
 }
 }
 
@@ -273,7 +356,7 @@ button.blue_button {
 	visibility: visible;
 	position: relative;
 	left: 70px;
-	bottom: 13px;
+/*	bottom: 13px;*/
 }
 #wrapper span {
 	visibility: visible;
@@ -294,6 +377,7 @@ button.blue_button {
 }
 }
 @media(max-width:414px) {
+	a.navbar-brand img {margin-left: -1em;}
 #wrapper.toggled #page-content-wrapper {
 	position: absolute;
 	margin-right: 60px;
@@ -317,7 +401,7 @@ button.blue_button {
 	visibility: visible;
 	position: relative;
 	left: 70px;
-	bottom: 13px;
+/*	bottom: 13px;*/
 }
 #wrapper span {
 	visibility: visible;
@@ -336,8 +420,13 @@ button.blue_button {
 	position: relative;
 	margin-right: 0;
 }
-	.harvard-topbar span {margin-left: 0px;}
+.harvard-topbar span {margin-left: 0px;}
+	
+
 }
+
+
+
 /*!
  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
