--- a/includes/style.css
+++ b/includes/style.css
@@ -785,7 +785,7 @@ p {
 	top: 1%;
 	left: 2%;
 	width: 95%;
-	height: 95%;
+	height: 96%;
 	background-color: lightgray;
 	overflow: auto;
 }
@@ -5736,7 +5736,7 @@ ul.trans_data_wide li {
 }
 .content_box {
 	padding-bottom: 2em;
-	overflow-x: scroll;/*Adds a little space at the bottom of the form.  This should be moved further up after tested on other pages. */
+	/*overflow-x: scroll;*/  /*Adds a little space at the bottom of the form.  This should be moved further up after tested on other pages. */
 }
 .group_trans {
 	float: left;
